takamaka_examples/src/takamaka/tests/errors/illegalcalltoentry2/C.java
package takamaka.tests.errors.illegalcalltoentry2;

import io.takamaka.lang.Contract;
import takamaka.lang.Entry;

public class C extends Contract {

	public @Entry void entry() {}
}